[project]
name = "projeto-streamlit"
version = "0.1.0"
description = ""
authors = [
    {name = "Jhonny Marcelo de Oliveira",email = "jhonnymarceloo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.45.1,<2.0.0)",
    "pandas (>=2.3.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
